[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_remote_media_io"
version = "0.0.5"
description = "Load media (image/video/audio) from remote URL, and save results to remote storage."
authors = [
  {name = "Ellis Shang", email = "you@gmail.com"}
]
readme = "README.md"
license = {text = "MIT license"}
requires-python = ">=3.10"
classifiers = []
dependencies = []



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
    "azure-identity",
    "azure-storage-blob"
]

[project.urls]
Repository = "https://github.com/shellishack/comfyui_remote_media_io"
BugTracker = "https://github.com/shellishack/comfyui_remote_media_io/issues"
Documentation = "https://github.com/shellishack/comfyui_remote_media_io/wiki"


[tool.comfy]
PublisherId = "shellishack"
DisplayName = "ComfyUI Remote Media IO"
Icon = ""
Tags = []
Repository = "https://github.com/shellishack/comfyui_remote_media_io"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
